对 DriftExt 进行了更新(不完整)

--- a/build.yaml
+++ b/build.yaml
@@ -4,3 +4,5 @@ targets:
       drift_dev:
         options:
           mutable_classes: true
+          named_parameters: true
+          named_parameters_always_required: true
