--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   # catcher 需要。
   package_info_plus: ^1.4.2
 
+  uuid: ^3.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
