--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   get: ^4.6.5
   # 上拉、下拉刷新 - 已选最佳
   pull_to_refresh: ^2.0.0
+  extended_nested_scroll_view: ^5.1.0
   # toast - 已选最佳
   fluttertoast: ^8.0.9
   # dialog
