--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   package_info_plus: ^1.4.2
   # 下拉列表 - 关注 flutter_speed_dial
   dropdown_button2: ^1.5.2
+  # 图标库
+  font_awesome_flutter: ^10.1.0
 
   uuid: ^3.0.6
 
