--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
   # 获取包信息。
   # catcher 需要。
   package_info_plus: ^1.4.2
-  # 下拉列表 - 关注 flutter_speed_dial
+  # 下拉列表 - 其他 flutter_speed_dial
   dropdown_button2: ^1.5.2
   # 图标库
   font_awesome_flutter: ^10.1.0
