--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,8 +70,8 @@ dependencies:
   logger: ^1.1.0
 
   # drift 外键/关联表的注解和生成器。
-  drift_with:
-    path: ../aaa/drift_with
+  drift_reference:
+    path: ../aaa/drift_reference
 
 dev_dependencies:
   flutter_test:
@@ -80,7 +80,7 @@ dev_dependencies:
   # 代码规范约束
   flutter_lints: ^1.0.4
   # drift 需要
-#  drift_dev: ^1.5.2
+  drift_dev: ^1.5.2
   # drift 需要
   build: ^2.3.0
   build_runner: ^2.1.8
