进行了整理，可正常运行虚拟机。

--- a/subpackages/drift_main/pubspec.yaml
+++ b/subpackages/drift_main/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  uuid: ^3.0.6
+
+  logger: ^1.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
