--- a/subpackages/drift_custom/build.yaml
+++ b/subpackages/drift_custom/build.yaml
@@ -1,8 +1,20 @@
 builders:
   drift_reference:
     import: "package:drift_custom/builders.dart"
-    build_extensions: { ".dart": [ ".ref.dart",".ctr.dart" ] }
-    builder_factories: [ "referenceBuilder","constructorBuilder" ]
+    build_extensions: { ".dart": [ ".ref.dart" ] }
+    builder_factories: [ "referenceBuilder" ]
+    auto_apply: dependents
+    build_to: source
+  drift_constructor:
+    import: "package:drift_custom/builders.dart"
+    build_extensions: { ".dart": [ ".ctr.dart" ] }
+    builder_factories: [ "constructorBuilder" ]
+    auto_apply: dependents
+    build_to: source
+  drift_reset:
+    import: "package:drift_custom/builders.dart"
+    build_extensions: { ".dart": [ ".reset.dart" ] }
+    builder_factories: [ "resetBuilder" ]
     auto_apply: dependents
     build_to: source
 
