--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
 
   logger: ^1.1.0
 
+  # 下拉列表 - 其他 flutter_speed_dial
+  dropdown_button2: ^1.5.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
