--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.17.6 <3.0.5"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,38 +32,31 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  # ios风格icon
-  cupertino_icons: ^1.0.2
   # 本地数据库
-  drift: ^1.5.0
+  drift: ^2.0.2+1
   # drift 需要
-  sqlite3_flutter_libs: ^0.5.5
+  sqlite3_flutter_libs: ^0.5.9
   # drift 需要
-  path_provider: ^2.0.9
+  path_provider: ^2.0.11
   # drift 需要
-  path: ^1.8.0
+  path: ^1.8.1
   # drift 需要，在应用内可视化数据库数据
-  drift_db_viewer: ^1.0.3
+  drift_db_viewer: ^2.0.0
   # 底部导航栏 - 关注 persistent_bottom_nav_bar/salomon_bottom_bar
-  animated_bottom_navigation_bar: ^1.0.0
-  get: ^4.6.5
+  animated_bottom_navigation_bar: ^1.1.0
   # 上拉、下拉刷新 - 已选最佳
   pull_to_refresh: ^2.0.0
-  extended_nested_scroll_view: ^5.1.0
+  extended_nested_scroll_view: ^5.1.3
   # toast/dialog - 已选最佳，其他 fluttertoast/adaptive_dialog
-  flutter_smart_dialog: ^4.5.3+2
-  # 异常处理
-  catcher: ^0.6.9
-  # 获取设备信息。
-  # catcher 需要。
-  device_info_plus: ^3.2.3
-  # 获取包信息。
-  # catcher 需要。
-  package_info_plus: ^1.4.2
+  flutter_smart_dialog: ^4.5.4+2
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^1.5.2
+  dropdown_button2: ^1.7.2
   # 图标库
   font_awesome_flutter: ^10.1.0
+
+
+  build_runner: ^2.2.0
+  source_gen: ^1.2.2
 
   uuid: ^3.0.6
 
