--- a/subpackages/drift_custom/pubspec.yaml
+++ b/subpackages/drift_custom/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.17.6 <3.0.5"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -14,13 +14,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
-  build_runner: ^2.1.8
+  build_runner: ^2.2.0
   source_gen: ^1.2.2
 
-  tools:
-    path: ../tools
+#  tools:
+#    path: ../tools
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
