--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   # 下拉列表 - 其他 flutter_speed_dial
   dropdown_button2: ^1.7.2
 
+  flutter_smart_dialog: ^4.5.4+2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
