--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   dropdown_button2: ^1.7.2
   # 图标库
   font_awesome_flutter: ^10.1.0
+  # 数学公式解析
+  math_expressions: ^2.3.1
 
 
   build_runner: ^2.2.0
