--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -16,9 +16,9 @@ dependencies:
   logger: ^1.1.0
 
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^1.7.2
+  dropdown_button2: ^1.8.2
 
-  flutter_smart_dialog: 4.5.5
+  flutter_smart_dialog: 4.5.5+6
 
 dev_dependencies:
   flutter_test:
