--- a/subpackages/drift_main/build.yaml
+++ b/subpackages/drift_main/build.yaml
@@ -1,7 +1,7 @@
 targets:
   $default:
     sources:
-      exclude: [ 'test/*' ]
+      exclude: [ 'test/*' ,'lib/tool/*' ]
 
     builders:
       # disables the SharedPartBuilder in favor of a PartBuilder from moor_generator
@@ -24,6 +24,8 @@ targets:
 
   run_drift_main:
     dependencies: [ 'drift_main' ]
+    sources:
+      exclude: [ 'test/*' ,'lib/tool/*' ]
     builders:
       # Disable all auto-applied builders from moor
       drift_dev:
