--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Sep 25 18:01:50 CST 2022
-sdk.dir=D\:\\androidsdk
+#Wed Oct 12 21:26:21 CST 2022
+sdk.dir=C\:\\Users\\LongPC\\AppData\\Local\\Android\\Sdk
