--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dependencies:
   # 数学公式解析
   math_expressions: ^2.3.1
   dio: ^4.0.6
+  # 主要用来自定义键盘
+  cool_ui: ^1.3.0
+  # 返回键拦截器
+  back_button_interceptor: ^6.0.0
 
 
   build_runner: ^2.2.1
