--- a/subpackages/httper/pubspec.yaml
+++ b/subpackages/httper/pubspec.yaml
@@ -17,6 +17,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
   dio: ^4.0.6
+  json_serializable: ^6.5.4
+  build_runner: ^2.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
