--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   # 下拉列表 - 其他 flutter_speed_dial
   dropdown_button2: ^1.8.2
 
+  # 上拉、下拉刷新 - 已选最佳
+  pull_to_refresh: ^2.0.0
+
   flutter_smart_dialog: 4.6.2+1
 
 dev_dependencies:
