--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,38 +33,38 @@ dependencies:
     sdk: flutter
 
   # 本地数据库
-  drift: ^2.1.0
+  drift: any
   # drift 需要
-  sqlite3_flutter_libs: ^0.5.10
+  sqlite3_flutter_libs: any
   # drift 需要
-  path_provider: ^2.0.11
+  path_provider: any
   # drift 需要
-  path: ^1.8.2
+  path: 1.8.2
   # drift 需要，在应用内可视化数据库数据
-  drift_db_viewer: ^2.0.0
+  drift_db_viewer: any
   # 底部导航栏 - 关注 persistent_bottom_nav_bar/salomon_bottom_bar
-  animated_bottom_navigation_bar: ^1.1.0
+  animated_bottom_navigation_bar: any
   # 上拉、下拉刷新 - 已选最佳
-  pull_to_refresh: ^2.0.0
-  extended_nested_scroll_view: ^5.1.3
+  pull_to_refresh: any
+  extended_nested_scroll_view: any
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^1.8.2
+  dropdown_button2: any
   # 图标库
-  font_awesome_flutter: ^10.2.1
+  font_awesome_flutter: any
   # 数学公式解析
-  math_expressions: ^2.3.1
-  dio: ^4.0.6
+  math_expressions: any
+  dio: any
   # 返回键拦截器
-  back_button_interceptor: ^6.0.0
+  back_button_interceptor: any
   # 自定义键盘
-  cool_ui: ^1.3.0
+  cool_ui: 1.3.0
 
-  build_runner: ^2.2.1
-  source_gen: ^1.2.5
+  build_runner: any
+  source_gen: any
 
-  uuid: ^3.0.6
+  uuid: any
 
-  logger: ^1.1.0
+  logger: any
 
   drift_main:
     path: ./subpackages/drift_main
@@ -80,8 +80,8 @@ dev_dependencies:
     sdk: flutter
 
   # 代码规范约束
-  flutter_lints: ^2.0.1
-  import_path: ^1.1.0
+  flutter_lints: any
+  import_path: any
 
 
 # For information on the generic Dart part of this file, see the
