--- a/subpackages/drift_custom/pubspec.yaml
+++ b/subpackages/drift_custom/pubspec.yaml
@@ -14,10 +14,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: any
 
-  build_runner: ^2.2.1
-  source_gen: ^1.2.5
+  build_runner: any
+  source_gen: any
 
 #  tools:
 #    path: ../tools
