--- a/subpackages/drift_main/pubspec.yaml
+++ b/subpackages/drift_main/pubspec.yaml
@@ -11,26 +11,26 @@ dependencies:
   flutter:
     sdk: flutter
 
-  uuid: ^3.0.6
+  uuid: any
 
-  logger: ^1.1.0
+  logger: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: any
 
 
-  drift_dev: ^2.1.0
-  build: ^2.3.1
-  build_runner: ^2.2.1
-  source_gen: ^1.2.5
-  path_provider: ^2.0.11
+  drift_dev: any
+  build: any
+  build_runner: any
+  source_gen: any
+  path_provider: any
 
 
-  dio: ^4.0.6
-  json_annotation: ^4.7.0
-  json_serializable: ^6.5.4
+  dio: any
+  json_annotation: any
+  json_serializable: any
 
   drift_custom:
     path: ../drift_custom
