--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,9 +55,11 @@ dependencies:
   math_expressions: any
   dio: any
   # 返回键拦截器
-  back_button_interceptor: any
+  back_button_interceptor: 6.0.0
   # 自定义键盘
   cool_ui: 1.3.0
+  # 富文本编辑器
+  flutter_quill: 6.1.6
 
   build_runner: any
   source_gen: any
@@ -81,8 +83,6 @@ dev_dependencies:
 
   # 代码规范约束
   flutter_lints: any
-  import_path: any
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
