--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   cool_ui: 1.3.0
   # 富文本编辑器
   flutter_quill: 6.1.6
+  # 加载指示器
+  flutter_spinkit: ^5.1.0
+  # 加载
+  flutter_easyloading: ^3.0.5
 
   build_runner: any
   source_gen: any
