--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   # 自定义键盘
   cool_ui: 1.3.0
   # 富文本编辑器
-  flutter_quill: 6.1.6
+  flutter_quill: 6.3.2
   # 加载指示器
   flutter_spinkit: ^5.1.0
   # 加载
@@ -69,7 +69,7 @@ dependencies:
   # 异常捕获
   catcher: ^0.7.0
 
-  modal_bottom_sheet: ^2.1.2
+  modal_bottom_sheet: ^3.0.0-pre
 
 
   build_runner: any
@@ -87,7 +87,10 @@ dependencies:
 
   tools:
     path: ./subpackages/tools
-
+dependency_overrides:
+  catcher:
+    git:
+      url: https://github.com/ThexXTURBOXx/catcher.git
 dev_dependencies:
   flutter_test:
     sdk: flutter
