--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   # 包信息
   package_info_plus: ^3.0.2
 
+  # 加载指示器
+  flutter_spinkit: ^5.1.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
