--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,17 +1,19 @@
 buildscript {
-    ext.kotlin_version = '1.6.20'
+    ext.kotlin_version = '1.8.0'
     repositories {
         maven {
-            url 'https://maven.aliyun.com/repository/google'
-
+            url 'https://maven.aliyun.com/repository/public/'
         }
         maven {
-            url 'https://maven.aliyun.com/repository/jcenter'
+            url 'https://maven.aliyun.com/repository/google'
         }
+        mavenLocal()
+        mavenCentral()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:7.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -19,12 +21,14 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url 'https://maven.aliyun.com/repository/google'
-
+            url 'https://maven.aliyun.com/repository/public/'
         }
         maven {
-            url 'https://maven.aliyun.com/repository/jcenter'
+            url 'https://maven.aliyun.com/repository/google'
         }
+        mavenLocal()
+        mavenCentral()
+        google()
     }
 }
 
