--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,14 +60,22 @@ dependencies:
   back_button_interceptor: 6.0.0
   # 自定义键盘
   cool_ui: 1.3.0
+
   # 富文本编辑器
-  flutter_quill: 6.3.2
+  flutter_quill: 6.4.2
+  # 对 flutter_quill 支持嵌入块
+  flutter_quill_extensions: ^0.1.0
+  # 对 flutter_quill 支持 html
+  vsc_quill_delta_to_html: ^1.0.1+1
+  # 支持 html widget
+  flutter_html: ^3.0.0-alpha.6
+
   # 加载指示器
   flutter_spinkit: ^5.1.0
   # 加载
   flutter_easyloading: ^3.0.5
   # 异常捕获
-#  catcher: ^0.7.0
+  #  catcher: ^0.7.0
   # 虚线边框
   dotted_border: any
   # 异步（取消 Future等）
@@ -76,7 +84,7 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
 
 
-  build_runner: any
+  build_runner: 2.3.3
   source_gen: any
 
   uuid: any
