--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,8 +80,10 @@ dependencies:
   dotted_border: any
   # 异步（取消 Future等）
   async: ^2.10.0
-
+  # 底部升起
   modal_bottom_sheet: ^3.0.0-pre
+  # 网格布局
+  flutter_staggered_grid_view: ^0.6.2
 
 
   build_runner: 2.3.3
