--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.5"
+  sdk: ">=2.17.6 <3.7.7"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,42 +33,43 @@ dependencies:
     sdk: flutter
 
   # 本地数据库
-  drift: any
+  drift: ^2.5.0
   # drift 需要
-  sqlite3_flutter_libs: any
+  sqlite3_flutter_libs: ^0.5.13
   # drift 需要
-  path_provider: 2.0.12
+  path_provider: ^2.0.13
   # drift 需要
-  path: 1.8.2
+  path: ^1.8.2
   # drift 需要，在应用内可视化数据库数据
-  drift_db_viewer: any
+  drift_db_viewer: ^2.0.0
   # 底部导航栏 - 关注 persistent_bottom_nav_bar/salomon_bottom_bar
-  animated_bottom_navigation_bar: any
+  animated_bottom_navigation_bar: ^1.2.0
   # 上拉、下拉刷新 - 已选最佳
-  pull_to_refresh: any
-  extended_nested_scroll_view: any
+  pull_to_refresh: ^2.0.0
+  extended_nested_scroll_view: ^6.0.0
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: any
+  dropdown_button2: ^2.0.0
   # 图标库1
-  font_awesome_flutter: any
+  font_awesome_flutter: ^10.4.0
   # 图标库2
   line_icons: ^2.0.1
   # 数学公式解析
-  math_expressions: any
+  math_expressions: ^2.3.1
   dio: ^5.0.0
   # 返回键拦截器
-  back_button_interceptor: 6.0.0
+  back_button_interceptor: ^6.0.0
   # 自定义键盘
-  cool_ui: 1.3.0
+  cool_ui: ^1.3.0
 
   # 富文本编辑器
-  flutter_quill: 6.4.2
+  flutter_quill: ^6.4.2
   # 对 flutter_quill 支持嵌入块
   flutter_quill_extensions: ^0.1.0
   # 对 flutter_quill 支持 html
   vsc_quill_delta_to_html: ^1.0.1+1
   # 支持 html widget
   flutter_html: ^3.0.0-alpha.6
+  flutter_inappwebview: ^5.7.2+3
 
   # 加载指示器
   flutter_spinkit: ^5.1.0
@@ -77,7 +78,7 @@ dependencies:
   # 异常捕获
   #  catcher: ^0.7.0
   # 虚线边框
-  dotted_border: any
+  dotted_border: ^2.0.0+3
   # 异步（取消 Future等）
   async: ^2.10.0
   # 底部升起
@@ -86,12 +87,12 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
 
 
-  build_runner: 2.3.3
-  source_gen: any
+  build_runner: ^2.3.3
+  source_gen: ^1.2.7
 
-  uuid: any
+  uuid: ^3.0.7
 
-  logger: any
+  logger: ^1.3.0
 
   drift_main:
     path: ./subpackages/drift_main
@@ -107,7 +108,7 @@ dev_dependencies:
     sdk: flutter
 
   # 代码规范约束
-  flutter_lints: any
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
