--- a/subpackages/drift_custom/pubspec.yaml
+++ b/subpackages/drift_custom/pubspec.yaml
@@ -5,7 +5,6 @@ homepage:
 
 environment:
   sdk: ">=2.17.6 <3.0.5"
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
@@ -14,10 +13,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: any
+  flutter_lints: ^2.0.1
 
-  build_runner: any
-  source_gen: any
+  build_runner: ^2.3.3
+  source_gen: ^1.2.7
 
 #  tools:
 #    path: ../tools
