--- a/subpackages/drift_main/pubspec.yaml
+++ b/subpackages/drift_main/pubspec.yaml
@@ -5,32 +5,31 @@ homepage:
 
 environment:
   sdk: ">=2.17.6 <3.0.5"
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  uuid: any
+  uuid: ^3.0.7
 
-  logger: any
+  logger: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: any
+  flutter_lints: ^2.0.1
 
 
-  drift_dev: any
-  build: any
-  build_runner: 2.3.3
-  source_gen: any
-  path_provider: 2.0.12
+  drift_dev: ^2.5.2
+  build: ^2.3.1
+  build_runner: ^2.3.3
+  source_gen: ^1.2.7
+  path_provider: ^2.0.13
 
 
-  dio: ^5.0.0
-  json_annotation: any
-  json_serializable: any
+  dio: ^5.0.2
+  json_annotation: ^4.8.0
+  json_serializable: ^6.6.1
 
   drift_custom:
     path: ../drift_custom
