--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -5,26 +5,25 @@ homepage:
 
 environment:
   sdk: ">=2.17.6 <3.0.5"
-  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  uuid: any
+  uuid: ^3.0.7
 
-  logger: any
+  logger: ^1.3.0
 
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: any
+  dropdown_button2: ^2.0.0
 
   # 上拉、下拉刷新 - 已选最佳
-  pull_to_refresh: any
+  pull_to_refresh: ^2.0.0
 
-  flutter_smart_dialog: 4.9.0+1
+  flutter_smart_dialog: ^4.9.0+3
 
   # 图标库
-  font_awesome_flutter: any
+  font_awesome_flutter: ^10.4.0
 
   # 设备信息
   device_info_plus: ^8.0.0
@@ -36,12 +35,12 @@ dependencies:
   flutter_spinkit: ^5.1.0
 
   # 返回键拦截器
-  back_button_interceptor: 6.0.0
+  back_button_interceptor: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: any
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
