--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,45 +33,45 @@ dependencies:
     sdk: flutter
 
   # 本地数据库
-  drift: ^2.5.0
+  drift: ^2.8.0
   # drift 需要
-  sqlite3_flutter_libs: ^0.5.13
+  sqlite3_flutter_libs: ^0.5.15
   # drift 需要
-  path_provider: ^2.0.13
+  path_provider: ^2.0.15
   # drift 需要
-  path: ^1.8.2
+  path: ^1.8.3
   # drift 需要，在应用内可视化数据库数据
   drift_db_viewer: ^2.0.0
   # 底部导航栏 - 关注 persistent_bottom_nav_bar/salomon_bottom_bar
   animated_bottom_navigation_bar: ^1.2.0
   # 上拉、下拉刷新 - 已选最佳
   pull_to_refresh: ^2.0.0
-  extended_nested_scroll_view: ^6.0.0
+  extended_nested_scroll_view: ^6.1.0
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^2.0.0
+  dropdown_button2: ^2.1.2
   # 图标库1
   font_awesome_flutter: ^10.4.0
   # 图标库2
   line_icons: ^2.0.1
   # 数学公式解析
-  math_expressions: ^2.3.1
-  dio: ^5.0.0
+  math_expressions: ^2.4.0
+  dio: ^5.1.2
   # 返回键拦截器
   back_button_interceptor: ^6.0.0
   # 自定义键盘
   cool_ui: ^1.3.0
 
   # 富文本编辑器
-  flutter_quill: ^6.4.2
+#  flutter_quill: ^7.1.18
   # 对 flutter_quill 支持嵌入块
-  flutter_quill_extensions: ^0.1.0
+#  flutter_quill_extensions: ^0.3.1
   # 对 flutter_quill 支持 html
-  vsc_quill_delta_to_html: ^1.0.1+1
+#  vsc_quill_delta_to_html: ^1.0.3
   # 支持 html widget
-  flutter_html: ^3.0.0-alpha.6
+  flutter_html: ^3.0.0-beta.1
 
   # 加载指示器
-  flutter_spinkit: ^5.1.0
+  flutter_spinkit: ^5.2.0
   # 加载
   flutter_easyloading: ^3.0.5
   # 异常捕获
@@ -79,21 +79,20 @@ dependencies:
   # 虚线边框
   dotted_border: ^2.0.0+3
   # 异步（取消 Future等）
-  async: ^2.10.0
+  async: ^2.11.0
   # 底部升起
-  modal_bottom_sheet: ^3.0.0-pre
+  modal_bottom_sheet: ^2.1.2
   # 网格布局
   flutter_staggered_grid_view: ^0.6.2
 
-
-  build_runner: ^2.3.3
-  source_gen: ^1.2.7
+  build_runner: ^2.4.4
+  source_gen: ^1.3.2
 
   uuid: ^3.0.7
 
   logger: ^1.3.0
 
-  analyzer: ^5.11.1
+  analyzer: ^5.12.0
 
   drift_main:
     path: ./subpackages/drift_main
