--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,11 @@ dependencies:
   cool_ui: ^1.3.0
 
   # 富文本编辑器
-#  flutter_quill: ^7.1.18
+  flutter_quill: ^7.1.18
   # 对 flutter_quill 支持嵌入块
-#  flutter_quill_extensions: ^0.3.1
+  flutter_quill_extensions: ^0.3.1
   # 对 flutter_quill 支持 html
-#  vsc_quill_delta_to_html: ^1.0.3
+  vsc_quill_delta_to_html: ^1.0.3
   # 支持 html widget
   flutter_html: ^3.0.0-beta.1
 
@@ -81,7 +81,7 @@ dependencies:
   # 异步（取消 Future等）
   async: ^2.11.0
   # 底部升起
-  modal_bottom_sheet: ^2.1.2
+  modal_bottom_sheet: ^3.0.0-pre
   # 网格布局
   flutter_staggered_grid_view: ^0.6.2
 
@@ -102,7 +102,10 @@ dependencies:
 
   tools:
     path: ./subpackages/tools
-
+    # TODO：临时，等flutter_quill包修复
+dependency_overrides:
+  intl: ^0.18.1
+  flutter_math_fork: ^0.7.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
