--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,9 @@ dependencies:
   cool_ui: ^1.3.0
 
   # 富文本编辑器
-  flutter_quill: ^7.1.18
+  flutter_quill: ^7.2.1
   # 对 flutter_quill 支持嵌入块
-  flutter_quill_extensions: ^0.3.1
+#  flutter_quill_extensions: ^0.3.2
   # 对 flutter_quill 支持 html
   vsc_quill_delta_to_html: ^1.0.3
   # 支持 html widget
