--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
 
   # 本地数据库
-  drift: ^2.8.0
+  drift: ^2.8.2
   # drift 需要
   sqlite3_flutter_libs: ^0.5.15
   # drift 需要
@@ -48,7 +48,7 @@ dependencies:
   pull_to_refresh: ^2.0.0
   extended_nested_scroll_view: ^6.1.0
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^2.1.2
+  dropdown_button2: ^2.1.3
   # 图标库1
   font_awesome_flutter: ^10.4.0
   # 图标库2
@@ -65,6 +65,10 @@ dependencies:
   flutter_quill: ^7.2.1
   # 对 flutter_quill 支持嵌入块
 #  flutter_quill_extensions: ^0.3.2
+  flutter_quill_extensions:
+    git:
+      url: https://github.com/singerdmx/flutter-quill.git
+      path: flutter_quill_extensions
   # 对 flutter_quill 支持 html
   vsc_quill_delta_to_html: ^1.0.3
   # 支持 html widget
