--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
 
   # 本地数据库
-  drift: ^2.8.2
+  drift: ^2.10.0
   # drift 需要
   sqlite3_flutter_libs: ^0.5.15
   # drift 需要
@@ -46,33 +46,29 @@ dependencies:
   animated_bottom_navigation_bar: ^1.2.0
   # 上拉、下拉刷新 - 已选最佳
   pull_to_refresh: ^2.0.0
-  extended_nested_scroll_view: ^6.1.0
+  extended_nested_scroll_view: ^6.1.2
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^2.1.3
+  dropdown_button2: ^2.3.6
   # 图标库1
-  font_awesome_flutter: ^10.4.0
+  font_awesome_flutter: ^10.5.0
   # 图标库2
-  line_icons: ^2.0.1
+  line_icons: ^2.0.3
   # 数学公式解析
   math_expressions: ^2.4.0
-  dio: ^5.1.2
+  dio: ^5.3.0
   # 返回键拦截器
-  back_button_interceptor: ^6.0.0
+  back_button_interceptor: ^6.0.2
   # 自定义键盘
-  cool_ui: ^1.3.0
+#  cool_ui: ^1.3.0
 
   # 富文本编辑器
-  flutter_quill: ^7.2.1
+  flutter_quill: ^7.2.18
   # 对 flutter_quill 支持嵌入块
-#  flutter_quill_extensions: ^0.3.2
-  flutter_quill_extensions:
-    git:
-      url: https://github.com/singerdmx/flutter-quill.git
-      path: flutter_quill_extensions
+  flutter_quill_extensions: ^0.3.4
   # 对 flutter_quill 支持 html
   vsc_quill_delta_to_html: ^1.0.3
   # 支持 html widget
-  flutter_html: ^3.0.0-beta.1
+  flutter_html: ^3.0.0-beta.2
 
   # 加载指示器
   flutter_spinkit: ^5.2.0
@@ -89,14 +85,14 @@ dependencies:
   # 网格布局
   flutter_staggered_grid_view: ^0.6.2
 
-  build_runner: ^2.4.4
-  source_gen: ^1.3.2
+  build_runner: ^2.4.6
+  source_gen: ^1.4.0
 
   uuid: ^3.0.7
 
-  logger: ^1.3.0
+  logger: ^1.4.0
 
-  analyzer: ^5.12.0
+  analyzer: ^6.0.0
 
   drift_main:
     path: ./subpackages/drift_main
@@ -106,16 +102,15 @@ dependencies:
 
   tools:
     path: ./subpackages/tools
-    # TODO：临时，等flutter_quill包修复
 dependency_overrides:
   intl: ^0.18.1
-  flutter_math_fork: ^0.7.0
+  flutter_math_fork: ^0.7.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   # 代码规范约束
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
