--- a/subpackages/drift_custom/pubspec.yaml
+++ b/subpackages/drift_custom/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.17.6 <3.0.5"
+  sdk: ">=2.17.6"
 
 dependencies:
   flutter:
@@ -13,10 +13,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
 
-  build_runner: ^2.4.4
-  source_gen: ^1.3.2
+  build_runner: ^2.4.6
+  source_gen: ^1.4.0
 
 #  tools:
 #    path: ../tools
