--- a/subpackages/drift_main/pubspec.yaml
+++ b/subpackages/drift_main/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.17.6 <3.0.5"
+  sdk: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -12,24 +12,24 @@ dependencies:
 
   uuid: ^3.0.7
 
-  logger: ^1.3.0
+  logger: ^1.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
 
 
-  drift_dev: ^2.8.1
-  build: ^2.4.0
-  build_runner: ^2.4.4
-  source_gen: ^1.3.2
+  drift_dev: ^2.10.0
+  build: ^2.4.1
+  build_runner: ^2.4.6
+  source_gen: ^1.4.0
   path_provider: ^2.0.15
 
 
-  dio: ^5.1.2
+  dio: ^5.3.0
   json_annotation: ^4.8.1
-  json_serializable: ^6.6.2
+  json_serializable: ^6.7.1
 
   drift_custom:
     path: ../drift_custom
