--- a/subpackages/tools/pubspec.yaml
+++ b/subpackages/tools/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.17.6 <3.0.5"
+  sdk: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -12,35 +12,35 @@ dependencies:
 
   uuid: ^3.0.7
 
-  logger: ^1.3.0
+  logger: ^1.4.0
 
   # 下拉列表 - 其他 flutter_speed_dial
-  dropdown_button2: ^2.1.2
+  dropdown_button2: ^2.3.6
 
   # 上拉、下拉刷新 - 已选最佳
   pull_to_refresh: ^2.0.0
 
-  flutter_smart_dialog: ^4.9.0+6
+  flutter_smart_dialog: ^4.9.3+2
 
   # 图标库
-  font_awesome_flutter: ^10.4.0
+  font_awesome_flutter: ^10.5.0
 
   # 设备信息
-  device_info_plus: ^9.0.0
+  device_info_plus: ^9.0.2
 
   # 包信息
-  package_info_plus: ^4.0.0
+  package_info_plus: ^4.0.2
 
   # 加载指示器
   flutter_spinkit: ^5.2.0
 
   # 返回键拦截器
-  back_button_interceptor: ^6.0.0
+  back_button_interceptor: ^6.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
