--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,9 @@ dependencies:
   # 左右滑动
   carousel_slider: ^4.2.1
 
+  # 浮动按钮
+  flutter_speed_dial: ^7.0.0
+
   drift_main:
     path: ./subpackages/drift_main
 
