--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,6 +84,8 @@ dependencies:
   modal_bottom_sheet: ^3.0.0-pre
   # 网格布局
   flutter_staggered_grid_view: ^0.6.2
+  # 标签输入框
+  textfield_tags: ^2.0.2
 
   build_runner: ^2.4.6
   source_gen: ^1.4.0
