--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.2
   # 标签输入框
   textfield_tags: ^2.0.2
+  # tooltip
+  just_the_tooltip: ^0.0.12
 
   build_runner: ^2.4.6
   source_gen: ^1.4.0
