--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,9 @@ dependencies:
   #  cool_ui: ^1.3.0
 
   # 富文本编辑器
-  flutter_quill: ^7.2.18
+  flutter_quill: ^7.3.3
   # 对 flutter_quill 支持嵌入块
-  flutter_quill_extensions: ^0.3.4
+  flutter_quill_extensions: ^0.4.0
   # 对 flutter_quill 支持 html
   vsc_quill_delta_to_html: ^1.0.3
   # 支持 html widget
@@ -88,6 +88,10 @@ dependencies:
   textfield_tags: ^2.0.2
   # tooltip
   just_the_tooltip: ^0.0.12
+  # 图片下载、存储、缓存
+  cached_network_image: ^3.2.3
+  # 照片选择器
+  image_picker: ^0.8.5+3
 
   build_runner: ^2.4.6
   source_gen: ^1.4.0
