--- a/subpackages/drift_main/pubspec.yaml
+++ b/subpackages/drift_main/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   dio: ^5.3.0
   json_annotation: ^4.8.1
   json_serializable: ^6.7.1
+  cached_network_image: ^3.2.3
 
   drift_custom:
     path: ../drift_custom
