--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,8 @@ dependencies:
   image_picker: ^0.8.5+3
   # 图片裁剪
   image_cropper: ^5.0.0
+  # 滑动条
+  syncfusion_flutter_sliders: ^23.2.7
 
   like_button: ^2.0.5
 
